[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "toctree_plus"
version = "0.1.0"
description = "Enhanced Sphinx TocTree that shows classes and functions as if they were sections."
readme = "README.rst"
keywords = [ "sphinx", "documentation", "sphinx-extension",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/toctree_plus"
"Issue Tracker" = "https://github.com/sphinx-toolbox/toctree_plus/issues"
"Source Code" = "https://github.com/sphinx-toolbox/toctree_plus"
Documentation = "https://toctree_plus.readthedocs.io/en/latest"
